@@ -1,5 +1,16 @@
 2007-10-13  Dan Williams  <dcbw@redhat.com>
 
+	* src/Makefile.am
+	  src/sha1.h -> src/wireless-security/sha1.h
+	  src/sha1.c -> src/wireless-security/sha1.c
+	  src/wireless-security/ws-wpa-psk.h
+	  src/wireless-security/ws-wpa-psk.c
+	  src/wireless-security/wireless-security.h
+	  src/wireless-security/Makefile.am
+		- Add WPA-PSK passphrase and hex support
+
+2007-10-13  Dan Williams  <dcbw@redhat.com>
+
 	* src/wireless-security/Makefile.am
 	  src/wireless-security/ws-wep-passphrase.c
 	  src/wireless-security/ws-wep-passphrase.h
